--- a/homework23/package.json
+++ b/homework23/package.json
@@ -4,6 +4,10 @@
   "description": "'gulp intro'",
   "main": "script.js",
   "scripts": {
+    "html": "gulp html",
+    "css": "gulp css",
+    "js": "gulp js",
+    "watch": "gulp watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -15,6 +19,15 @@
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
     "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0"
+    "gulp-babel": "^8.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-less": "^5.0.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-sass": "^5.1.0",
+    "gulp-stream": "^0.0.2",
+    "gulp-uglify": "^3.0.2",
+    "merge-stream": "^2.0.0",
+    "saas": "^1.0.0",
+    "sass": "^1.62.0"
   }
 }
