--- a/homework24/package.json
+++ b/homework24/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.80.0"
+    "webpack": "^5.80.0",
+    "webpack-cli": "^5.0.2"
   }
 }
